--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -4,7 +4,7 @@
 /// @access private
 @mixin _oLayoutRule($side: 'left') {
 	border-#{$side}: 2px solid oColorsByName('teal');
-	padding-#{$side}: $_o-layout-gutter;
+	padding-#{$side}: oSpacingByName('s3');
 }
 
 /// Base styling for the layout content
